fix button alignments and dropdown style (#206)
* fix button alignments and dropdown style

* added gradient

--- a/packages/formstr-app/src/index.css
+++ b/packages/formstr-app/src/index.css
@@ -28,20 +28,25 @@ code {
     monospace;
 }
 
+.ant-btn{
+  padding: 5.5px 15px;
+}
+
 .ant-btn-primary {
-  background-image: radial-gradient(
-    rgb(255, 81, 47) 0%,
-    rgb(238, 132, 80) 99%,
-    rgb(236, 74, 9) 100%
-  );
+  padding: 5.5px 15px;
+  background: linear-gradient(180deg, #FF6B00 0%, #FF2E00 60.92%);
   transition: 0.3s;
+
   &:hover {
     opacity: 70%;
   }
+
   &:disabled {
     background-image: none;
   }
 }
+
+
 .ant-card-head-title {
   text-overflow: unset !important;
   white-space: unset !important;
@@ -59,7 +64,7 @@ code {
   backdrop-filter: blur(30px);
 }
 
-.ant-dropdown-menu {
+.ant-dropdown-menu {  
   max-height: 250px;
   overflow-y: scroll;
 }
